--- a/src/components/Mail.css
+++ b/src/components/Mail.css
@@ -12,7 +12,9 @@
   display: flex;
   align-items: center;
 }
-
+a {
+  text-decoration: none;
+}
 .mail_button img {
   width: 35px;
   height: 35px;
